--- a/templates/main/include/footer.html
+++ b/templates/main/include/footer.html
@@ -1,6 +1,22 @@
 {% load static %}
 
 <footer>
+    <a href="https://wa.me/2348036656173" class="whatsapp-float" target="_blank" style="
+        position: fixed;
+        bottom: 30px;
+        left: 30px;
+        width: 60px;
+        height: 60px;
+        z-index: 1000;
+        transition: transform 0.3s ease-in-out;
+        display: inline-block;">
+        <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp" style="
+        width: 100%;
+        height: auto;
+        border-radius: 50%;
+        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);">
+    </a>
+
     <!-- Footer start -->
     <div class="footer__area footer-bg pt-100 pb-50">
         <div class="footer__top footer__top-3 pb-60">
