--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -886,7 +886,7 @@
 
         niceSelectUl.each(function () {
             var liText = $(this).text().trim();
-            console.log(liText, 'emmaaaa')
+            console.log(liText, 'bomach')
             // Check if the <li> text is not in the validOptions
             if (validOptions.indexOf(liText) === -1) {
                 $(this).remove(); // Remove the unmatched <li> element
