--- a/templates/main/contact.html
+++ b/templates/main/contact.html
@@ -99,7 +99,7 @@
                     </div>
                 </div>
                 <div class="col-lg-8">
-                    <form action="{{ request.path }}" method="POST">
+                    <form id="myForm" action="{{ request.path }}" method="POST">
                         {% csrf_token %}
                         <div class="tp-contact-form wow fadeInUp" data-wow-delay=".6s">
                             <div class="row custom-mar-20">
@@ -128,6 +128,7 @@
                                         {{ form.message }}
                                     </div>
                                 </div>
+                                <input type="hidden" id="g-recaptcha-response" name="g-recaptcha-response">
                                 <div class="col-md-12 custom-pad-20">
                                     <div class="tp-contact-form-field">
                                         <button type="submit" class="theme-btn home2-btn btn-before"><i
