Working on jobs

--- a/templates/main/include/header_others.html
+++ b/templates/main/include/header_others.html
@@ -178,6 +178,7 @@
 
                                     <li><a href="/project">Projects</a></li>
                                     <li><a href="/blog">Blog</a></li>
+                                    <li><a href="/jobs">Careers</a></li>
                                 </ul>
                             </nav>
                         </div>
