--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -107,6 +107,9 @@
                                     <li class="has-dropdown">
                                         <a href="/blog">Blog</a>
                                     </li>
+                                    <li class="has-dropdown">
+                                        <a href="/jobs">Careers</a>
+                                    </li>
                                 </ul>
                             </nav>
                         </div>
