Worked on pdf issue

--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -108,7 +108,7 @@
                                         <a href="/blog">Blog</a>
                                     </li>
                                     <li class="has-dropdown">
-                                        <a href="/jobs">Careers</a>
+                                        <a href="/jobs">Jobs</a>
                                     </li>
                                 </ul>
                             </nav>
