--- a/templates/main/jobs.html
+++ b/templates/main/jobs.html
@@ -22,7 +22,7 @@
             <div class="row">
                 <div class="col-xl-12">
                     <div class="page-title-wrapper text-center">
-                        <h1 class="page-title">Careers</h1>
+                        <h1 class="page-title">Jobs</h1>
                         <div class="breadcrumb breadcrumb-list">
                             <nav aria-label="Breadcrumbs" class="breadcrumb-trail breadcrumbs">
                                 <ul class="trail-items">
