--- a/templates/main/job-details.html
+++ b/templates/main/job-details.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>{{ job.title }} - Bomach Group Careers</title>
+    <title>{{ job.title }} - Bomach Group</title>
     <meta name="description" content="{{ job.title }} position at Bomach Group">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
