Added og image tag

--- a/templates/main/include/head.html
+++ b/templates/main/include/head.html
@@ -1,6 +1,7 @@
 {% load static %}
 
 <link rel="shortcut icon" href="{% static 'assets/img/logo/bomach-icon.jpeg' %}">
+<meta property="og:image" content="{% static 'assets/img/logo/bomach-logo-hd.jpeg' %}" />
 
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css">
