--- a/templates/main/include/head.html
+++ b/templates/main/include/head.html
@@ -1,8 +1,14 @@
 {% load static %}
 
 <link rel="shortcut icon" href="{% static 'assets/img/logo/bomach-icon.jpeg' %}">
+<meta property="og:url" content="https://bomachgroup.com{{ request.get_full_path }}" />
+<meta property="og:type" content="website" />
+<meta property="og:title" content="{% block og_title %}{{ page_title|default:'Bomach Group' }}{% endblock %}" />
+<meta property="og:description" content="{% block og_description %}Bomach Group Website{% endblock %}" />
 <meta property="og:image" content="{% static 'assets/img/logo/bomach-logo-hd.jpeg' %}" />
 
+<meta property="og:image:width" content="1024" />
+<meta property="og:image:height" content="1024" />
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.6.0/css/bootstrap.min.css">
 <link rel="stylesheet" href="{% static 'assets/css/bootstrap.min.css' %}">
