--- a/templates/main/include/footer.html
+++ b/templates/main/include/footer.html
@@ -119,6 +119,10 @@
                 </div>
                 <div class="col-xxl-6 col-xl-6 col-lg-6 col-md-6">
                     <div class="footer__cmenu text-end">
+                        <ul class="footer__menu" style="margin-bottom: 15px; display: flex; gap: 20px; list-style: none; padding: 0;">
+                            <li><a href="/privacy" style="color: #fff; text-decoration: none; font-size: 0.9rem;">Privacy Policy</a></li>
+                            <li><a href="/terms-of-service" style="color: #fff; text-decoration: none; font-size: 0.9rem;">Terms of Service</a></li>
+                        </ul>
                         <ul class="footer__social">
                             <li><a href="https://web.facebook.com/bomachgroup"><i class="fab fa-facebook-f"></i></a>
                             </li>
